create package core.com.board.requestparam.model class interface ISerching and core.comboard.requestparam.ection class RequestParamSerach

--- a/builletin_board/src/main/resources/log4j.properties
+++ b/builletin_board/src/main/resources/log4j.properties
@@ -11,24 +11,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 # Redirect log messages to a log file windows 
  log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=D\:\\System\\ProjectBig\\builder.log
+log4j.appender.file.File= D\:\\System\\bulletin\\bullettin.log
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-
-
-# Redirect log messages to a log file ubuntu
-#log4j.appender.file=org.apache.log4j.RollingFileAppender
-#log4j.appender.file.File=/logJboss/filelog/myapp.log
-#log4j.appender.file.MaxBackupIndex=10
-#log4j.appender.file.layout=org.apache.log4j.PatternLayout
-#log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-
-#log4j.appender.classFtpConnection=org.apache.log4j.RollingFileAppender
-#log4j.appender.classFtpConnection.File=/logJboss/filelog/myapp1.log
-#log4j.appender.classFtpConnection.MaxFileSize=200MB
-#log4j.appender.classFtpConnection.MaxBackupIndex=10
-#log4j.appender.classFtpConnection.layout=org.apache.log4j.PatternLayout
-#log4j.appender.classFtpConnection.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-
-#log4j.logger.ftp.connection.file.image.bank.FtpConnection = info, file
