--- a/builletin_board/src/main/resources/redirect.properties
+++ b/builletin_board/src/main/resources/redirect.properties
@@ -1,5 +1,5 @@
-postService.jsp= /jsp/PlaceOder.jsp
-postBooking.jsp =./postbooking
-postToRent.jsp = ./posttorent
-postTakeForRent.jsp =./posttakeforrent
-ProfileSetings.jsp = ./profile
+
+init.jsp= ./jsp/Init.jsp
+initialized =  ./initlogin
+search =./search
+delete =./delete
