--- a/builletin_board/pom.xml
+++ b/builletin_board/pom.xml
@@ -1,20 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>builletin</groupId>
-  <artifactId>board</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>builletin_board Maven Webapp</name>
-  <url>http://maven.apache.org</url>
- <properties>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>builletin</groupId>
+	<artifactId>board</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>builletin_board Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<properties>
 		<spring.version>4.2.1.RELEASE</spring.version>
 		<project.build.sourceEncoding>UTF-8  </project.build.sourceEncoding>
 		<log4j.version>1.2.17</log4j.version>
 		<mongo.version> 3.0.3 </mongo.version>
 		<version.jackson>1.9.13</version.jackson>
 		<hibernate.version>3.5.6-Final </hibernate.version>
-		 <systest.package>**/work/database/**</systest.package>
+		<systest.package>**/core/**</systest.package>
+		<basedir> test</basedir>
 	</properties>
 
 	<dependencies>
@@ -127,7 +128,24 @@
 			<artifactId>jul-to-slf4j</artifactId>
 			<version>1.7.5</version>
 		</dependency>
+		<dependency>
+	 <groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-core</artifactId>
+	<version>2.6.3</version>
+   </dependency>
+<dependency>
+	<groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-databind</artifactId>
+	<version>2.6.3</version>
+</dependency>
 
+        <dependency>
+	<groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-annotations</artifactId>
+	<version>2.6.3</version>
+</dependency>
+
+  
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
@@ -179,40 +197,40 @@
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>javax.persistence</artifactId>
 			<version>2.1.0</version>
 		</dependency>
 
-		
-	</dependencies>
-	<profiles>
-        <profile>
-            <id>systest</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.5</version>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/*$*</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-	<build>
-		 <finalName>board</finalName>
-		
-		<plugins>
 
-            <plugin>
+	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>systest</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.5</version>
+						<configuration>
+							<excludes>
+								<exclude>**/*$*</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<build>
+		<finalName>board</finalName>
+		<!--<testSourceDirectory>${basedir}</testSourceDirectory> <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory> -->
+		<plugins>
+          <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.5</version>
@@ -223,11 +241,10 @@
                     </excludes>
                 </configuration>
             </plugin>
-       
-
-			<plugin>
 			
-			   <artifactId>maven-compiler-plugin</artifactId>
+			<plugin>
+
+				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
 					<source>1.8</source>
@@ -236,6 +253,6 @@
 			</plugin>
 
 		</plugins>
-   
-  </build>
+
+	</build>
 </project>
