--- a/builletin_board/src/main/resources/jdbc.properties
+++ b/builletin_board/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/builder
+jdbc.databaseurl=jdbc:mysql://localhost:3306/bulliten_board
 jdbc.username=root
 jdbc.password=Sergey221912
-java.work=java:/work
+java.bulliten = java:/bulliten
