--- a/builletin_board/src/main/webapp/WEB-INF/web.xml
+++ b/builletin_board/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,83 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>Archetype Created Web Application</display-name>
+  <welcome-file-list>
+    <welcome-file>/jsp/index.jsp</welcome-file>
+  </welcome-file-list>
+  <jsp-config>
+    <taglib>
+      <taglib-uri>signup</taglib-uri>
+      <taglib-location>/WEB-INF/tld/signup.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>search_ads</taglib-uri>
+      <taglib-location>/WEB-INF/tld/search.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>list_advertis</taglib-uri>
+      <taglib-location>/WEB-INF/tld/listAdvertisement.tld</taglib-location>
+    </taglib>
+  </jsp-config>
+  <filter>
+    <filter-name>LocalFilter</filter-name>
+    <filter-class>web.com.filter.local.LocalFilter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>InitFilter</filter-name>
+    <filter-class>web.com.filter.initalized.InitFilter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>hibernateFilter</filter-name>
+    <filter-class>
+           org.springframework.orm.hibernate3.support.OpenSessionInViewFilter
+  </filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>hibernateFilter</filter-name>
+    <url-pattern>*.jsp</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>appServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/mvcfirst-dispatcher-servlet.xml </param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>/WEB-INF/mvc-dispatcher-servlet.xml</param-value>
+  </context-param>
+  <servlet-mapping>
+    <servlet-name>appServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+ <!--  <error-page>
+    <error-code>401</error-code>
+    <location>/jsp/error.jsp</location>
+  </error-page>
+  <error-page>
+    <error-code>403</error-code>
+    <location>/jsp/error.jsp</location>
+  </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/jsp/error.jsp</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/jsp/error.jsp</location>
+  </error-page>
+  <error-page>
+    <error-code>503</error-code>
+    <location>/jsp/error.jsp</location>
+  </error-page>
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/jsp/error.jsp</location>
+  </error-page> -->
 </web-app>
