create editor.js. editor create advertisement form  and validation form

--- a/builletin_board/src/main/webapp/WEB-INF/web.xml
+++ b/builletin_board/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,10 @@
       <taglib-uri>list_advertis</taglib-uri>
       <taglib-location>/WEB-INF/tld/listAdvertisement.tld</taglib-location>
     </taglib>
+    <taglib>
+      <taglib-uri>list_redact</taglib-uri>
+      <taglib-location>/WEB-INF/tld/listRedact.tld</taglib-location>
+    </taglib>
   </jsp-config>
   <filter>
     <filter-name>LocalFilter</filter-name>
