--- a/builletin_board/src/main/webapp/WEB-INF/web.xml
+++ b/builletin_board/src/main/webapp/WEB-INF/web.xml
@@ -60,7 +60,7 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
- <error-page>
+ <!-- <error-page>
     <error-code>401</error-code>
     <location>/jsp/error.jsp</location>
   </error-page>
@@ -83,5 +83,5 @@
   <error-page>
     <exception-type>java.lang.Throwable</exception-type>
     <location>/jsp/error.jsp</location>
-  </error-page> 
+  </error-page>  -->
 </web-app>
